# scoring-playground

./: .gitattributes  .gitignore  .gitmodules  NOTICE  README.md  pyproject.toml
ctfs/ecsc2024/: convert.py
ctfs/ecsc2025/: convert.py
ctfs/faustctf2024/: convert.py  load.sh
ctfs/saarctf2024/: docker-compose.yml  extract.py  load.sh
docs/formulas/: atklabv2.md
scripts/: plot.py
src/scoring_playground/: __init__.py  model.py  util.py
src/scoring_playground/data/: __init__.py  builtin.py
src/scoring_playground/data/raw/: ecsc2024.json  ecsc2025.json  faustctf2024.json  saarctf2024.json
src/scoring_playground/scoring/: __init__.py  atklabv1.py  atklabv2.py  ecsc2024.py  ecsc2025.py  jeopardy.py  saarctf2024.py
tests/: test_ecsc2024.py  test_saarctf2024.py
