[project]
name = "scoring-playground"
version = "0.1.0"
description = "AD CTF scoring playground"
authors = [
    { name = "Tobias Holl", email = "tobias@tholl.xyz" }
]
requires-python = ">=3.12"
dependencies = [
    "frozendict>=2.4.6",
    "msgspec>=0.19.0",
    "tabulate>=0.9.0",
    "types-tabulate>=0.9.0.20241207",
    "wcwidth>=0.2.13",
    "matplotlib>=3.9.0",
]

[project.scripts]
scoring-playground = "scoring_playground:__main__"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
